paper is a better theme

--- a/Config
+++ b/Config
@@ -40,7 +40,7 @@ Put the theme name or url from [bootswatch](https://www.bootstrapcdn.com/bootswa
 This setup uses the following:
 
 ```
->slate
+>paper
 ```
 
 ## Header
